--- a/FinalVersion/index.html
+++ b/FinalVersion/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>圣诞主题</title>
-    <link rel='stylesheet' href='http://img.mukewang.com/down/566a38a90001f17d00000000.css' />
-    <script type="text/javascript" src="http://img.mukewang.com/down/566a38f000016f0900000000.js"></script>
+    <link rel='stylesheet' href='site.css' />
+    <script type="text/javascript" src="site.js"></script>
 </head>
 
 <body>
