--- a/course.html
+++ b/course.html
@@ -9,13 +9,11 @@
         body {
             margin: 0;
             padding: 0;
-            width: 100vw;
-            height: 100vh;
         }
 
         div {
             width: 100vw;
-            height: 100vh;
+            height: 500px;
             padding-top: 150px;
             display: flex;
             flex-direction: column;
