--- a/course.html
+++ b/course.html
@@ -15,7 +15,7 @@
 
         div {
             width: 100vw;
-            height: 500px;
+            height: 80vh;
             padding-top: 150px;
             display: flex;
             flex-direction: column;
