--- a/course.html
+++ b/course.html
@@ -29,16 +29,23 @@
             font-size: 25px;
             font-weight: bold;
             text-decoration: none;
+            margin-bottom: 0;
         }
 
         .head:hover {
             text-decoration: none;
         }
 
+        p {
+            font-size: 15px;
+            color: beige;
+            margin-top: 5px;
+        }
+
         a {
             text-decoration: none;
             color: #bfa;
-            padding-bottom: 50px;
+            margin-bottom: 50px;
             font-size: 20px;
         }
 
@@ -55,11 +62,12 @@
 <body>
     <div>
         <a href="https://github.com/tearill" class="head" target="_blank" title="我可以点的 你点我试试">我一点也不想上学校的网课</a>
+        <p>给我点它点它点它👆</p>
         <a href="https://onlineh5.zhihuishu.com/onlineWeb.html#/studentIndex" target="_blank"
-            title="别点我 真不想上课">大型数据库---周一周三周五上午一二节👉</a>
+            title="别点我 真不想上课">大型数据库---周一周三周五上午一二节👉go</a>
         <a href="http://www.icourse163.org/spoc/course/DHLG-1450190209" target="_blank"
-            title="你还是去别地儿看看吧 别上课了">分布式系统---周一五六节和周四七八节👉</a>
-        <a href="http://www.julyedu.com/video/play/40/192" target="_blank" title="直接劝退">数据挖掘👉</a>
+            title="你还是去别地儿看看吧 别上课了">分布式系统---周一五六节和周四七八节👉go</a>
+        <a href="http://www.julyedu.com/video/play/40/192" target="_blank" title="直接劝退">数据挖掘👉go</a>
     </div>
 
     <script>
